2002-12-19	fabian
    * Fixed enter key on numeric keyboard problem
    * Fixed a problem that causes transparency settings lost
    * Fixed a lot of bugs related to VT100 emulation.
    
2002-12-18	fabian
    * change the shortcut key to close terminal to command-w
      and close window to shift-command-w, a la mozilla
      
2002-12-18	Ujwal S. Sathyam <ujwal@setlurgroup.com>

    * Page up/down scrolling keys now need Shift key down 
      a la xterm since some programs like vi need to 
      interpret page up/down keys on their own.
      

2002-12-17	fabian
    * Added an AutoClose option in preference
    * Re-arranged preference panel
    * Re-arranged the toolbar items
    * Got rid of the quick-run panel
    * Del key now sends the correct escape sequence instead of 
      0x7f
    * Set default term type to xterm, which is consitent with
      the rest of the code
    * Version number is now 0.5.7
    * Fixed a bug related to setting default shell
    
2002-12-17	Ujwal S. Sathyam <ujwal@setlurgroup.com>

    * Using user's default shell in setting initial preferences.
    
    * Added drag-n-drop support for the text view. Text and file 
      names get pasted into the shell when dragged and dropped 
      onto the text view.
      
    * Fixed crash when customizing toolbar.
    
    * Page Up and Page Down keys now scroll the text view.
    

2002-12-16	Ujwal S. Sathyam <ujwal@setlurgroup.com>

    * Removed ugly hack of spinning off a new thread when 
      switching sessions using popup menu. Calling selectSession: 
      directly now works.
      

2002-12-16	fabian
    * Got the addressbook popup button icon to work
    * Updated strings files for Chinese
    
2002-12-16	Ujwal S. Sathyam <ujwal@setlurgroup.com>

    * Removed addressbook toolbar item since the 
      addressbook popup menu gives similar functionality.
      Ideally, the icon for the popup button should be 
      the addressbook icon, but I couldn't get it to work.