@@ -13,7 +13,6 @@
 	<string>283.0</string>
 	<key>IBOpenObjects</key>
 	<array>
-		<integer>387</integer>
 		<integer>533</integer>
 		<integer>29</integer>
 	</array>
