@@ -13,10 +13,8 @@
 	<string>283.0</string>
 	<key>IBOpenObjects</key>
 	<array>
-		<integer>29</integer>
-		<integer>421</integer>
 		<integer>533</integer>
-		<integer>387</integer>
+		<integer>29</integer>
 	</array>
 	<key>IBSystem Version</key>
 	<string>6F21</string>
